# src/controllers/auth.controller.ts
@@ -22,7 +22,27 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().email().required(),
-    password: Yup.string().required(),
+    password: Yup.string()
+        .required()
+        .min(6, "Password must be at least 6 character")
+        .test(
+            'at-least-one-uppercase-letter',
+            "Constains at least one uppercase letter",
+            (value) => { 
+                if (!value) return false;
+                const regex = /^(?=.*[A-Z])/;
+                return regex.test(value);
+            }
+        )
+        .test(
+            'at-least-one-number-letter',
+            "Constains at least one number letter",
+            (value) => { 
+                if (!value) return false;
+                const regex = /^(?=.*\d)/;
+                return regex.test(value);
+            }
+        ),
     confirmPassword: Yup.string().required().oneOf([Yup.ref('password'), ""], 'Password not match')
 })
 
@@ -75,7 +95,8 @@ export default {
                 $or: [
                     { email: identifier },
                     { username: identifier }
-                ]
+                ],
+                isActived: true
             });
 
             if (!userByIdentifier) {
@@ -84,7 +105,6 @@ export default {
                     data: null
                 })
             }
-
 
             // compare password
             const comparePassword: boolean =
@@ -130,6 +150,42 @@ export default {
                 message: "Success get user profile",
                 data: result
             })
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null
+            })
+        }
+    },
+
+    async activation(req: Request, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.requestBody = {
+            required: true,
+            schema: {$ref: "#/components/schemas/ActivationRequest'}
+         }
+         */
+        try {
+            const { code } = req.body as { code: string };
+
+            const user = await UserModel.findOneAndUpdate(
+                {
+                    activationCode: code,
+                },
+                {
+                    isActived: true,
+                },
+                {
+                    new: true,
+                }
+            );
+
+            res.status(200).json({
+                message: "user successfully activated",
+                data: user
+            });
         } catch (error) {
             const err = error as unknown as Error;
             res.status(400).json({
